@@ -53,8 +53,7 @@ class DenseInterface : public DenseScatterer
     void calcRT_safe();
     void calcRT_non_orth_fast();
     void calcRT_non_orth_safe();
-    void calcRT_blochsection_safe();    
-    void calcRT_blochsection_non_orth_safe();
+    void calcRT_blochsection_non_orth_fast();
     void calcRT_bloch_bloch();
     void calcRT_bloch_wg();
     void calcRT_wg_bloch();
